<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_action_person"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favRes"
            android:icon="@drawable/ic_action_fav"
            android:title="@string/favorites" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_action_faqs"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout" />
    </group>

</menu>